--- a/client/src/app/page.module.css
+++ b/client/src/app/page.module.css
@@ -482,3 +482,10 @@
 .categoryIcon {
   font-size: 1.25rem;
 }
+
+.loading {
+  text-align: center;
+  padding: 4rem 2rem;
+  font-size: 1.25rem;
+  color: #666;
+}
